--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
                     <span>new</span>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Saepe similique quisquam possimus laborum ullam beatae,
-                          velit vitae, ut commodi officia quis voluptatibus fugiat minus fuga,
-                         quasi qui adipisci sequi? Eum!
+                         Saepe similique quisquam possimus laborum ullam beatae.
                     </p>
 
                 </footer>
@@ -53,9 +51,7 @@
                         <span>sale</span>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                             Saepe similique quisquam possimus laborum ullam beatae,
-                              velit vitae, ut commodi officia quis voluptatibus fugiat minus fuga,
-                             quasi qui adipisci sequi? Eum!
+                             Saepe.
                         </p>
             </footer>
             </article>
