--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             Your Love, <br>
             your loft.
         </h6>
-        <img src="img/hamburguer.png" alt="">
+        <img src="lovt/hamburguer.png" alt="">
 
 
     </header>
     <main>
         <section id="banner">
-        <img width="100%" src="img/Rectangle 3.png" alt="">
+        <img width="100%" src="lovt/Rectangle 3.png" alt="">
         <div id="left-arrow"><</div>
         <div id="right-arrow"><</div>
         </section>
@@ -29,7 +29,7 @@
         <section id="sales" >
             <article>
                 <header>
-                <img src="img/Rectangle 6.png" alt="">
+                <img src="lovt/Rectangle 6.png" alt="">
                 </header>
                 <footer>
                     <span>$1.200,00</span>
@@ -42,9 +42,9 @@
                 </footer>
                 </article>
             
-                <article>
+                <article id="right-sale">
                     <header>
-                    <img src="img/Rectangle 7.png" alt="">
+                    <img src="lovt/Rectangle 7.png" alt="">
                     </header>
                     <footer>
                         <span>$2.000,00</span>
@@ -60,21 +60,21 @@
             <section id="your-style">
                 <h1>Your Style</h1>
                 <div>
-                    <img class="styles" width="100%" src="img/Rectangle 11.png" alt="">
+                    <img class="styles" width="100%" src="lovt/Rectangle 11.png" alt="">
                     <span>Industrial</span>
                 </div>
                 <div>
-                    <img class="styles" width="100%" src="img/Rectangle 12.png" alt="">
+                    <img class="styles" width="100%" src="lovt/Rectangle 12.png" alt="">
                     <span>Modern</span>
                 </div>
                 <div>
-                    <img class="styles" width="100%" src="img/Rectangle 13.png" alt="">
+                    <img class="styles" width="100%" src="lovt/Rectangle 13.png" alt="">
                 <span>Classic</span>
             </div>
             </section>
     </main>
     <footer>
-        <img src="img/image 1.png" alt="">
+        <img src="lovt/image 1.png" alt="">
         <p>
             LOVT - You love, your loft! <br>
             Broad St, <br>
@@ -83,9 +83,9 @@
             contact@lovtrealstate.com
         </p>
         <h4>Our Social Media</h4>
-        <img src="Vector.png" alt="">
-        <img src="Vector-1.png" alt="">
-        <img src="Vector-2.png" alt="">
+        <img src="lovt/Vector.png" alt="">
+        <img src="lovt/Vector-1.png" alt="">
+        <img src="lovt/Vector-2.png" alt="">
 
     </footer>
     
