--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
             your loft.
         </h6>
         <img src="lovt/hamburguer.png" alt="">
-
-
     </header>
     <main>
         <section id="banner">
@@ -29,14 +27,14 @@
         <section id="sales" >
             <article>
                 <header>
-                <img src="lovt/Rectangle 6.png" alt="">
+                <img class="styles" src="lovt/Rectangle 6.png" alt="">
                 </header>
                 <footer>
                     <span>$1.200,00</span>
                     <span>new</span>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Saepe similique quisquam possimus laborum ullam beatae.
+                        Saepe similique quisquam possimus laborum ullam beatae.
                     </p>
 
                 </footer>
@@ -44,14 +42,14 @@
             
                 <article id="right-sale">
                     <header>
-                    <img src="lovt/Rectangle 7.png" alt="">
+                    <img class="styles" src="lovt/Rectangle 7.png" alt="">
                     </header>
                     <footer>
                         <span>$2.000,00</span>
                         <span>sale</span>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                             Saepe.
+                            Saepe similique quisquam possimus laborum ullam beatae.
                         </p>
             </footer>
             </article>
