--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Saepe similique quisquam possimus laborum ullam beatae.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Saepe similique quisquam possimus laborum ullam beatae.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Saepe similique quisquam possimus laborum ullam beatae.
                     </p>
 
                 </footer>
@@ -48,6 +52,10 @@
                         <span>$2.000,00</span>
                         <span>sale</span>
                         <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Saepe similique quisquam possimus laborum ullam beatae.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Saepe similique quisquam possimus laborum ullam beatae.
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Saepe similique quisquam possimus laborum ullam beatae.
                         </p>
