--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <main>
         <section id="banner">
         <img width="100%" src="lovt/Rectangle 3.png" alt="">
-        <div id="left-arrow"><</div>
-        <div id="right-arrow"><</div>
+        
         </section>
 
         <section id="sales" >
@@ -31,7 +30,7 @@
                 </header>
                 <footer>
                     <span>$1.200,00</span>
-                    <span>new</span>
+                    <span class="right">New</span>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Saepe similique quisquam possimus laborum ullam beatae.
@@ -50,7 +49,7 @@
                     </header>
                     <footer>
                         <span>$2.000,00</span>
-                        <span>sale</span>
+                        <span class="right sale">Sale</span>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Saepe similique quisquam possimus laborum ullam beatae.
@@ -65,16 +64,15 @@
 
             <section id="your-style">
                 <h1>Your Style</h1>
-                <div>
-                    <img class="styles" width="100%" src="lovt/Rectangle 11.png" alt="">
+                <div class="styles opaque industrial">
                     <span>Industrial</span>
                 </div>
                 <div>
-                    <img class="styles" width="100%" src="lovt/Rectangle 12.png" alt="">
+                    <img class="styles opaque modern">
                     <span>Modern</span>
                 </div>
                 <div>
-                    <img class="styles" width="100%" src="lovt/Rectangle 13.png" alt="">
+                    <img class="styles opaque classic">
                 <span>Classic</span>
             </div>
             </section>
